--- a/package.json
+++ b/package.json
@@ -16,28 +16,29 @@
   },
   "homepage": "",
   "devDependencies": {
-    "yargs": "^6.6.0",
-    "gulp": "^3.9.1",
-    "gulp-if": "^2.0.2",
-    "main-bower-files": "^2.13.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-concat-css": "^2.3.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-imagemin": "^3.0.3",
-    "jshint": "^2.9.4",
-    "gulp-jshint": "^2.0.1",
-    "jshint-stylish": "^2.2.1",
-    "nunjucks": "^2.5.2",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-data": "^1.2.1",
-    "gulp-nunjucks-render": "^2.0.0",
-    "portfinder": "^1.0.12",
-    "gulp-connect": "^5.0.0", 
-    "gulp-stylus": "^2.5.0",
-    "stylus-iconfont": "^0.10.1",
     "autoprefixer-stylus": "^0.11.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-connect": "^5.0.0",
+    "gulp-data": "^1.2.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-jshint": "^2.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-nunjucks-render": "^2.0.0",
+    "gulp-stylus": "^2.5.0",
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "main-bower-files": "^2.13.1",
+    "nunjucks": "^2.5.2",
+    "portfinder": "^1.0.12",
+    "remodal": "^1.1.1",
     "require-dir": "^0.3.1",
-    "stylus-import-tree": "^0.1.10"
+    "stylus-iconfont": "^0.10.1",
+    "stylus-import-tree": "^0.1.10",
+    "yargs": "^6.6.0"
   }
 }
